# raytracer

./: CMakeLists.txt  README.md  light.hpp  main.cpp  material.cpp  material.hpp  scene.cpp  scene.hpp  sdl.cpp  sdl.hpp  sphere.cpp  sphere.hpp  surface.cpp  surface.hpp  vec3.cpp  vec3.hpp
